# airbert

./: LICENSE  Makefile  README.md  airbert.py  pyproject.toml  requirements.txt  test.py  test_bnb.py  test_speaker.py  test_zeroshot.py  train.py  train_bnb.py  train_speaker.py
data/task/: fsl1_0+R2R_train.json  fsl1_0+R2R_val_seen.json  fsl1_1+R2R_train.json  fsl1_1+R2R_val_seen.json  fsl1_2+R2R_train.json  fsl1_2+R2R_val_seen.json  fsl1_3+R2R_train.json  fsl1_3+R2R_val_seen.json  fsl1_4+R2R_train.json  fsl1_4+R2R_val_seen.json  fsl61+R2R_train.json  fsl6_0+R2R_train.json  fsl6_0+R2R_val_seen.json  fsl6_1+R2R_train.json  fsl6_1+R2R_val_seen.json  fsl6_2+R2R_train.json  fsl6_2+R2R_val_seen.json  fsl6_3+R2R_train.json  fsl6_3+R2R_val_seen.json  fsl6_4+R2R_train.json  fsl6_4+R2R_val_seen.json
scripts/: download.py  few_shot.py
slurm/: train-bnb-64.sh  train-bnb-8.slurm
utils/: cli.py  distributed.py  misc.py
utils/dataset/: __init__.py  beam_dataset.py  beam_fgr2r_dataset.py  bnb_dataset.py  bnb_features_reader.py  bnb_precomputed_dataset.py  bnb_speak_dataset.py  common.py  features_reader.py  hard_mining.py  pano_features_reader.py  perturbate_dataset.py  speak_dataset.py  trajectory_dataset.py  zero_shot_dataset.py
vilbert/: vilbert.py
