[tool.black]
line-length = 90
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '^external/'

[tool.poetry]
name = "airbert"
version = "1.0.0"
description = "Implementation of the ICCV 2021 paper"
authors = ["Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.7.1"
tqdm = "^4.62.3"
nltk = "^3.6.7"
numpy = "^1.21.4"
tensorboardX = "2.4.1"
boto3 = "^1.21.0"
requests = "^2.26.0"
transformers = "^4.15.0"
networkx = "^2.6.3"
lmdb = "^1.2.1"
typed-argument-parser = "^1.7.2"
argtyped = "^0.3.1"
gdown = "^4.2.1"

